Menu and layout fix for horizontal scrolling

--- a/universal.css
+++ b/universal.css
@@ -200,12 +200,14 @@ tr > td:nth-child(10) {
 /* Site structure */
 
 #wrapper {
-	float: right;
 	padding: 3%;
 	margin: 0px auto;
 	display: inline-block;
 	padding-top: 0px;
 	background-color: white;
+	position: absolute;
+	width: 100%;
+	left: 20%;
 }
 
 #nother {
